# PnAL

./: .gitignore  CITATION.cff  README.md  SECURITY.md  pyproject.toml  requirements.txt
configs/: example.env
docs/: code_availability.md
examples/: run_pnal.py
